fixed overflow issue

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -22,6 +22,7 @@ ng-view,
 .page-movies {
     height: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 body {
@@ -79,7 +80,7 @@ ng-view {
     top: 0;
     width: 100%;
     height: 100%;
-    position: absolute !important;
+    position: absolute;
     z-index: 9999;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
